BudgetCliCore/Grammar/Generated/BudgetCliParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\masta\Documents\repos\Budget-CLI\BudgetCliCore\Grammar\BudgetCli.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace BudgetCliCore.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class BudgetCliParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, PLUS=34, MINUS=35, HELP=36, VERSION=37, UNDO=38, REDO=39, 
		ACCOUNT=40, CATEGORY=41, SOURCE=42, SINK=43, TRANSACTION=44, INFLOW=45, 
		OUTFLOW=46, INTERNAL=47, HISTORY=48, CAT=49, LS=50, MOVE=51, NEW=52, REMOVE=53, 
		SET=54, ADD=55, SUBTRACT=56, DATE_DAY=57, DATE_MONTH=58, DATE_YEAR=59, 
		LAST=60, AGO=61, JANUARY=62, FEBRUARY=63, MARCH=64, APRIL=65, MAY=66, 
		JUNE=67, JULY=68, AUGUST=69, SEPTEMBER=70, OCTOBER=71, NOVEMBER=72, DECEMBER=73, 
		UNIT_DAY=74, UNIT_WEEK=75, UNIT_MONTH=76, UNIT_YEAR=77, MONDAY=78, TUESDAY=79, 
		WEDNESDAY=80, THURSDAY=81, FRIDAY=82, SATURDAY=83, SUNDAY=84, CURRENCY=85, 
		DIGIT=86, DIGITS=87, CHAR=88, WS=89;
	public const int
		RULE_expression = 0, RULE_command = 1, RULE_optionsListAccountLs = 2, 
		RULE_optionsListAccountNew = 3, RULE_optionsListAccountSet = 4, RULE_optionsListTransactionLs = 5, 
		RULE_optionsListTransactionNew = 6, RULE_optionsListHistoryLs = 7, RULE_optAccount = 8, 
		RULE_optAmountExpr = 9, RULE_optCategory = 10, RULE_optCount = 11, RULE_optDate = 12, 
		RULE_optDateExpr = 13, RULE_optDescription = 14, RULE_optDest = 15, RULE_optFunds = 16, 
		RULE_optFundsExpr = 17, RULE_optHelp = 18, RULE_optId = 19, RULE_optName = 20, 
		RULE_optPriority = 21, RULE_optRecursive = 22, RULE_optSource = 23, RULE_optAccountType = 24, 
		RULE_optTransactionType = 25, RULE_intExpr = 26, RULE_decimalExpr = 27, 
		RULE_dateExpr = 28, RULE_integer = 29, RULE_decimal = 30, RULE_date = 31, 
		RULE_month = 32, RULE_timeUnit = 33, RULE_dayOfWeek = 34, RULE_string = 35;
	public static readonly string[] ruleNames = {
		"expression", "command", "optionsListAccountLs", "optionsListAccountNew", 
		"optionsListAccountSet", "optionsListTransactionLs", "optionsListTransactionNew", 
		"optionsListHistoryLs", "optAccount", "optAmountExpr", "optCategory", 
		"optCount", "optDate", "optDateExpr", "optDescription", "optDest", "optFunds", 
		"optFundsExpr", "optHelp", "optId", "optName", "optPriority", "optRecursive", 
		"optSource", "optAccountType", "optTransactionType", "intExpr", "decimalExpr", 
		"dateExpr", "integer", "decimal", "date", "month", "timeUnit", "dayOfWeek", 
		"string"
	};

	private static readonly string[] _LiteralNames = {
		null, "'-a'", "'--account'", "'--amount'", "'-c'", "'--category'", "'--count'", 
		"'-d'", "'--date'", "'--description'", "'--destination'", "'-f'", "'--funds'", 
		"'-h'", "'--help'", "'-i'", "'--id'", "'-n'", "'--name'", "'-p'", "'--priority'", 
		"'-r'", "'--recurseive'", "'-s'", "'--source'", "'-t'", "'--type'", "':'", 
		"'('", "')'", "'.'", "'/'", "'\"'", "' '", "'+'", "'-'", null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'$'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "PLUS", "MINUS", 
		"HELP", "VERSION", "UNDO", "REDO", "ACCOUNT", "CATEGORY", "SOURCE", "SINK", 
		"TRANSACTION", "INFLOW", "OUTFLOW", "INTERNAL", "HISTORY", "CAT", "LS", 
		"MOVE", "NEW", "REMOVE", "SET", "ADD", "SUBTRACT", "DATE_DAY", "DATE_MONTH", 
		"DATE_YEAR", "LAST", "AGO", "JANUARY", "FEBRUARY", "MARCH", "APRIL", "MAY", 
		"JUNE", "JULY", "AUGUST", "SEPTEMBER", "OCTOBER", "NOVEMBER", "DECEMBER", 
		"UNIT_DAY", "UNIT_WEEK", "UNIT_MONTH", "UNIT_YEAR", "MONDAY", "TUESDAY", 
		"WEDNESDAY", "THURSDAY", "FRIDAY", "SATURDAY", "SUNDAY", "CURRENCY", "DIGIT", 
		"DIGITS", "CHAR", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BudgetCli.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static BudgetCliParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

	 public bool strict { get; set; } = false; 
		public BudgetCliParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BudgetCliParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ExpressionContext : ParserRuleContext {
		public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 0, RULE_expression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; command();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NewTransactionContext : CommandContext {
		public ITerminalNode NEW() { return GetToken(BudgetCliParser.NEW, 0); }
		public ITerminalNode TRANSACTION() { return GetToken(BudgetCliParser.TRANSACTION, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public OptionsListTransactionNewContext optionsListTransactionNew() {
			return GetRuleContext<OptionsListTransactionNewContext>(0);
		}
		public NewTransactionContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNewTransaction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CatAccountsContext : CommandContext {
		public ITerminalNode CAT() { return GetToken(BudgetCliParser.CAT, 0); }
		public ITerminalNode ACCOUNT() { return GetToken(BudgetCliParser.ACCOUNT, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public OptDateContext optDate() {
			return GetRuleContext<OptDateContext>(0);
		}
		public CatAccountsContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCatAccounts(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RedoContext : CommandContext {
		public ITerminalNode REDO() { return GetToken(BudgetCliParser.REDO, 0); }
		public RedoContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRedo(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NewAccountContext : CommandContext {
		public ITerminalNode NEW() { return GetToken(BudgetCliParser.NEW, 0); }
		public ITerminalNode ACCOUNT() { return GetToken(BudgetCliParser.ACCOUNT, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public OptionsListAccountLsContext optionsListAccountLs() {
			return GetRuleContext<OptionsListAccountLsContext>(0);
		}
		public NewAccountContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNewAccount(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VersionContext : CommandContext {
		public ITerminalNode VERSION() { return GetToken(BudgetCliParser.VERSION, 0); }
		public VersionContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVersion(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ListHistoryContext : CommandContext {
		public ITerminalNode LS() { return GetToken(BudgetCliParser.LS, 0); }
		public ITerminalNode HISTORY() { return GetToken(BudgetCliParser.HISTORY, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public OptionsListHistoryLsContext optionsListHistoryLs() {
			return GetRuleContext<OptionsListHistoryLsContext>(0);
		}
		public ListHistoryContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListHistory(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class HelpContext : CommandContext {
		public ITerminalNode HELP() { return GetToken(BudgetCliParser.HELP, 0); }
		public HelpContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHelp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UndoContext : CommandContext {
		public ITerminalNode UNDO() { return GetToken(BudgetCliParser.UNDO, 0); }
		public UndoContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUndo(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ListAccountsContext : CommandContext {
		public ITerminalNode LS() { return GetToken(BudgetCliParser.LS, 0); }
		public ITerminalNode ACCOUNT() { return GetToken(BudgetCliParser.ACCOUNT, 0); }
		public ListAccountsContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListAccounts(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SetAccountContext : CommandContext {
		public ITerminalNode SET() { return GetToken(BudgetCliParser.SET, 0); }
		public ITerminalNode ACCOUNT() { return GetToken(BudgetCliParser.ACCOUNT, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public OptionsListAccountSetContext optionsListAccountSet() {
			return GetRuleContext<OptionsListAccountSetContext>(0);
		}
		public SetAccountContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetAccount(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MoveAccountContext : CommandContext {
		public StringContext oldName;
		public StringContext newName;
		public ITerminalNode MOVE() { return GetToken(BudgetCliParser.MOVE, 0); }
		public ITerminalNode ACCOUNT() { return GetToken(BudgetCliParser.ACCOUNT, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public StringContext[] @string() {
			return GetRuleContexts<StringContext>();
		}
		public StringContext @string(int i) {
			return GetRuleContext<StringContext>(i);
		}
		public MoveAccountContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMoveAccount(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CatTransactionContext : CommandContext {
		public IntegerContext id;
		public ITerminalNode CAT() { return GetToken(BudgetCliParser.CAT, 0); }
		public ITerminalNode TRANSACTION() { return GetToken(BudgetCliParser.TRANSACTION, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public IntegerContext integer() {
			return GetRuleContext<IntegerContext>(0);
		}
		public CatTransactionContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCatTransaction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RemoveAccountContext : CommandContext {
		public ITerminalNode REMOVE() { return GetToken(BudgetCliParser.REMOVE, 0); }
		public ITerminalNode ACCOUNT() { return GetToken(BudgetCliParser.ACCOUNT, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public OptRecursiveContext optRecursive() {
			return GetRuleContext<OptRecursiveContext>(0);
		}
		public RemoveAccountContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRemoveAccount(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ListTransactionsContext : CommandContext {
		public ITerminalNode LS() { return GetToken(BudgetCliParser.LS, 0); }
		public ITerminalNode TRANSACTION() { return GetToken(BudgetCliParser.TRANSACTION, 0); }
		public OptHelpContext optHelp() {
			return GetRuleContext<OptHelpContext>(0);
		}
		public OptionsListTransactionLsContext optionsListTransactionLs() {
			return GetRuleContext<OptionsListTransactionLsContext>(0);
		}
		public ListTransactionsContext(CommandContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBudgetCliVisitor<TResult> typedVisitor = visitor as IBudgetCliVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListTransactions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		int _la;
		try {
			State = 141;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				_localctx = new HelpContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 74; Match(HELP);
				}
				break;
			case 2:
				_localctx = new VersionContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 75; Match(VERSION);
				}
				break;
			case 3:
				_localctx = new UndoContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 76; Match(UNDO);
				}
				break;
			case 4:
				_localctx = new RedoContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 77; Match(REDO);
				}
				break;
			case 5:
				_localctx = new CatAccountsContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
